add connection string for postgres

--- a/SecuredChatApp.WebApi/appsettings.json
+++ b/SecuredChatApp.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DbConnectionDevelopment": "User Id=postgres;Password=997123; Server=localhost;Port=5432;Database=securedchatapp;sslmode=Prefer;Trust Server Certificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
