--- a/SecuredChatApp.Infrastructure/SecuredChatApp.Infrastructure.csproj
+++ b/SecuredChatApp.Infrastructure/SecuredChatApp.Infrastructure.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SecuredChatApp.Core\SecuredChatApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
