add example secret key to appsettings.json

--- a/SecuredChatApp.WebApi/appsettings.json
+++ b/SecuredChatApp.WebApi/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "default secret key"
+  }
 }
