--- a/SecuredChatApp.WebApi/SecuredChatApp.WebApi.csproj
+++ b/SecuredChatApp.WebApi/SecuredChatApp.WebApi.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../SecuredChatApp.Infrastructure/SecuredChatApp.Infrastructure.csproj" />
+    <ProjectReference Include="../SecuredChatApp.Business/SecuredChatApp.Business.csproj" />
   </ItemGroup>
 
 </Project>
