--- a/SecuredChatApp.WebApi/SecuredChatApp.WebApi.csproj
+++ b/SecuredChatApp.WebApi/SecuredChatApp.WebApi.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="../SecuredChatApp.Business/SecuredChatApp.Business.csproj" />
   </ItemGroup>
 
+  <Target Name="PrePublishTarget" AfterTargets="Publish">
+    <Exec Command="dotnet ef database update" />
+  </Target>
+  
 </Project>
