--- a/SecuredChatApp.Business/SecuredChatApp.Business.csproj
+++ b/SecuredChatApp.Business/SecuredChatApp.Business.csproj
@@ -6,11 +6,16 @@
 
   <ItemGroup>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.2" />
+    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.10" />
   </ItemGroup>
 
 
   <ItemGroup>
     <ProjectReference Include="..\SecuredChatApp.Core\SecuredChatApp.Core.csproj" />
     <ProjectReference Include="..\SecuredChatApp.Infrastructure\SecuredChatApp.Infrastructure.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="BouncyCastle" />
+    <None Remove="BouncyCastle.NetCore" />
   </ItemGroup>
 </Project>
